--- a/repo/microservice-api-dev.properties
+++ b/repo/microservice-api-dev.properties
@@ -2,3 +2,11 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
+
+#eureka
+eureka.client.service-url.defaultZone=http://${eurekaUserName}:${eurekaPassWord}@peer1:2021/eureka/,http://${eurekaUserName}:${eurekaPassWord}@peer2:2022/eureka/
+eureka.instance.lease-renewal-interval-in-seconds=2
+eureka.instance.lease-expiration-duration-in-seconds=4
+feign.hystrix.enabled=false
+eurekaUserName=cluo
+eurekaPassWord=cluo
