--- a/repo/microservice-api-dev.properties
+++ b/repo/microservice-api-dev.properties
@@ -2,6 +2,13 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.initial-size=5
+spring.datasource.druid.min-idle=5
+spring.datasource.druid.max-active=20
+spring.datasource.druid.max-wait=60000
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 #eureka
 eureka.client.service-url.defaultZone=http://${eurekaUserName}:${eurekaPassWord}@peer1:2021/eureka/,http://${eurekaUserName}:${eurekaPassWord}@peer2:2022/eureka/
