--- a/repo/microservice-api-dev.properties
+++ b/repo/microservice-api-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://192.168.1.8:3306/lh?characterEncoding=utf-8
+spring.datasource.username=lh
+spring.datasource.password=lh123
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.initial-size=5
 spring.datasource.druid.min-idle=5
@@ -15,5 +15,5 @@ eureka.client.service-url.defaultZone=http://${eurekaUserName}:${eurekaPassWord}
 eureka.instance.lease-renewal-interval-in-seconds=2
 eureka.instance.lease-expiration-duration-in-seconds=4
 feign.hystrix.enabled=false
-eurekaUserName=cluo
-eurekaPassWord=cluo
+eurekaUserName=lmh
+eurekaPassWord=lmh
