--- a/repo/microservice-web-dev.properties
+++ b/repo/microservice-web-dev.properties
@@ -3,5 +3,5 @@ eureka.client.service-url.defaultZone=http://${eurekaUserName}:${eurekaPassWord}
 eureka.instance.lease-renewal-interval-in-seconds=2
 eureka.instance.lease-expiration-duration-in-seconds=4
 feign.hystrix.enabled=false
-eurekaUserName=cluo
-eurekaPassWord=cluo
+eurekaUserName=lmh
+eurekaPassWord=lmh
