--- a/repo/microservice-api-dev.properties
+++ b/repo/microservice-api-dev.properties
@@ -11,9 +11,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #eureka
-eureka.client.service-url.defaultZone=http://${eurekaUserName}:${eurekaPassWord}@peer1:2021/eureka/,http://${eurekaUserName}:${eurekaPassWord}@peer2:2022/eureka/
+eureka.client.service-url.defaultZone=http://peer1:2021/eureka/,http://peer2:2022/eureka/
 eureka.instance.lease-renewal-interval-in-seconds=2
 eureka.instance.lease-expiration-duration-in-seconds=4
 feign.hystrix.enabled=false
-eurekaUserName=lmh
-eurekaPassWord=lmh
+
+
