--- a/repo/microservice-api-dev.properties
+++ b/repo/microservice-api-dev.properties
@@ -1,14 +1,7 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.8:3306/lh?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://192.168.1.8:3306/lh?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.username=lh
 spring.datasource.password=lh123
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.initial-size=5
-spring.datasource.druid.min-idle=5
-spring.datasource.druid.max-active=20
-spring.datasource.druid.max-wait=60000
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #eureka
 eureka.client.service-url.defaultZone=http://peer1:2021/eureka/,http://peer2:2022/eureka/
